# FLARE.py

./: .gitignore  README.md  pyproject.toml
.codex/skills/gpu-model-smoke/: SKILL.md
ablation/: ablate_latent_blocks.sh  ablate_num_blocks.py  ablate_num_heads.py  ablate_num_layers.py  ablate_reviews.py  ablate_shared_latents.sh  run_comp.sh  scale_dml.py  time_memory_bwd.py  utils.py
am/: __main__.py
am/dataset/: filtering.py
am_dataset_stats/mesh_aspect_ratios/data_0-100/: 101635_11b839a3_5.csv  105762_19e04e0b_1.csv  107237_3c61f68c_17.csv  108851_4d515b10_5.csv  113358_08641c94_10.csv  116416_b2565d0a_10.csv  120535_e304dfca_1.csv  120700_d818883a_7.csv  123016_29f35476_1.csv  128367_1483fb5d_5.csv  129422_621d0a90_33.csv  131765_29b29f08_6.csv  132345_cb79d6ac_1.csv  136886_3aa46890_0.csv  (+81 more)
figs/: decoder.py  flare_decoder.py  flare_rank_adaptive.py  pdebench_vis.ipynb  spectrum.py  time_memory_proposal.py
lra/: __init__.py  __main__.py  callbacks.py  utils.py
lra/dataset/: __init__.py  lra.py  mta.py  strassen.py  sudoku.py  utils.py
lra/models/: __init__.py  backends.py  embeddings.py  flare.py  kernels.py  trm.py  wrapper.py
mlutils/: __init__.py  callbacks.py  ema.py  models.py  trainer.py  utils.py
pdebench/: __main__.py  callbacks.py  callbacks_timeseries.py  muon.py  rollout.py  utils.py
pdebench/dataset/: timeseries.py  utils.py
pdebench/models/: __init__.py  flare.py  flare_ablations.py  flare_experimental.py  lamo.py  loopy.py  perceiver.py  transformer.py  transolver_plus.py  ts3_uncond.py  unloopy.py  upt.py
scripts/: download_data.sh  install.sh
tests/: conftest.py
tests/ablation/: test_ablation_api.py
tests/gpu/: smoke_models_gpu.py
tests/lra/: test_lra_model_contracts.py
tests/pdebench/: test_pdebench_model_contracts.py
(+3261 files in other folders)
