[project]
name = "flare"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "gpustat>=1.1.1",
    "ipython>=9.4.0",
    "jsonargparse>=4.40.2",
    "matplotlib>=3.10.5",
    "meshio>=5.3.5",
    "open3d>=0.19.0",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "pyvista>=0.46.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "timm>=1.0.19",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
]
