[project]
name = "flare"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "jsonargparse>=4.40.2",
    "matplotlib>=3.10.5",
    "meshio>=5.3.5",
    "open3d>=0.19.0",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "pyvista>=0.46.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "timm>=1.0.19",
    "triton>=3.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ipython>=9.4.0",
    "gpustat>=1.1.1",
]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "pytest-randomly>=3.15.0",
]
pyg = [
    "torch-geometric>=2.6.1",
]
vision = [
    "diffusers>=0.35.0",
    "pillow>=10.0.0",
    "clean-fid>=0.1.35",
    "nvidia-dali-cuda120>=1.50.0",
    "accelerate>=1.10.0",
]
am_sdf = [
    "trimesh>=4.7.0",
    "rtree>=1.4.0",
]
meshgraphnet = [
    "tensorflow>=2.20.0",
]

[tool.flare.package_sets]
pyg_extensions = [
    "pyg_lib",
    "torch_scatter",
    "torch_sparse",
    "torch_cluster",
    "torch_spline_conv",
]
